// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalButtonGroup Should not render with no Button 1`] = `null`;

exports[`ModalButtonGroup Should render a ModalButtonGroup 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  border: 2px solid #00C8DC;
  background: #FFFFFF;
  color: #00C8DC;
}

.c2 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c2:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c2 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: #FFFFFF;
  color: #FFFFFF;
}

.c5 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c5:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c5 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c0 {
  border-top: 1px solid #E5E5E5;
  padding-top: 32px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  text-align: right;
  margin: 0 24px;
}

.c1 margin:0 24px @media (max-width:512px) {
  margin-top: 16px;
  margin-right: 0;
}

.c3 {
  width: 100%;
  margin: 0 auto;
  max-width: 400px;
}

@media (max-width:512px) {
  .c0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

@media (max-width:512px) {
  .c3 {
    width: 100%;
  }
}

<div
  className="c0"
  data-test="saiyan-modal-footer-buttons"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      data-test="saiyan-secondary-modal-footer-buttons"
      disabled={false}
      onClick={[Function]}
      size="md"
      type="button"
    >
      Bookmark
    </button>
  </div>
  <div
    className="c4"
  >
    <button
      className="c5 c3"
      data-test="saiyan-primary-modal-footer-buttons"
      disabled={false}
      onClick={[Function]}
      size="md"
      type="button"
    >
      Call to action
    </button>
  </div>
</div>
`;

exports[`ModalButtonGroup Should render with alignment. 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  border: 2px solid #00C8DC;
  background: #FFFFFF;
  color: #00C8DC;
}

.c2 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c2:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c2 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: #FFFFFF;
  color: #FFFFFF;
}

.c5 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c5:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c5 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c0 {
  border-top: 1px solid #E5E5E5;
  padding-top: 32px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 {
  text-align: right;
  margin: 0 24px;
}

.c1 {
  margin-right: 24px;
}

.c1 margin:0 24px @media (max-width:512px) {
  margin-top: 16px;
  margin-right: 0;
}

.c3 {
  width: 100%;
  margin: 0 auto;
  max-width: 400px;
}

@media (max-width:512px) {
  .c0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

@media (max-width:512px) {
  .c3 {
    width: 100%;
  }
}

<div
  className="c0"
  data-test="saiyan-modal-footer-buttons"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      data-test="saiyan-secondary-modal-footer-buttons"
      disabled={false}
      onClick={[Function]}
      size="md"
      type="button"
    >
      Bookmark
    </button>
  </div>
  <div
    className="c4"
  >
    <button
      className="c5 c3"
      data-test="saiyan-primary-modal-footer-buttons"
      disabled={false}
      onClick={[Function]}
      size="md"
      type="button"
    >
      Call to action
    </button>
  </div>
</div>
`;
